--- a/package.json
+++ b/package.json
@@ -17,5 +17,11 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dobrite/gol-react/issues"
+  },
+  "devDependencies": {
+    "webpack": "~1.4.11",
+    "jsx-loader": "~0.12.1",
+    "css-loader": "~0.9.0",
+    "react": "~0.12.0"
   }
 }
