--- a/package.json
+++ b/package.json
@@ -2,26 +2,33 @@
   "name": "gol-react",
   "version": "0.0.1",
   "description": "game of life with React",
-  "main": "gol.js",
-  "scripts": {
-    "test": "mocha"
-  },
+  "main": "src/gol.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/dobrite/gol-react.git"
   },
   "keywords": [
-    "react"
+    "react",
+    "flux",
+    "game of life"
   ],
   "author": "Dave O",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/dobrite/gol-react/issues"
   },
+  "dependencies": {
+    "flux": "^2.0.0",
+    "object-assign": "^1.0.0",
+    "react": "~0.12.0"
+  },
   "devDependencies": {
     "webpack": "~1.4.11",
     "jsx-loader": "~0.12.1",
-    "css-loader": "~0.9.0",
-    "react": "~0.12.0"
+    "css-loader": "~0.9.0"
+  },
+  "scripts": {
+    "start": "webpack --watch --colors --progress",
+    "test": "mocha"
   }
 }
