--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "webpack": "~1.4.11",
     "jsx-loader": "~0.12.1",
-    "css-loader": "~0.9.0"
+    "css-loader": "~0.9.0",
+    "es6-loader": "~0.2.0"
   },
   "scripts": {
     "start": "webpack --watch --colors --progress",
